docs/0.17/_sources/api/gammapy.modeling.models.PowerLaw2SpectralModel.rst.txt
PowerLaw2SpectralModel
======================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PowerLaw2SpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PowerLaw2SpectralModel.amplitude
      ~PowerLaw2SpectralModel.covariance
      ~PowerLaw2SpectralModel.default_parameters
      ~PowerLaw2SpectralModel.emax
      ~PowerLaw2SpectralModel.emin
      ~PowerLaw2SpectralModel.index
      ~PowerLaw2SpectralModel.parameters
      ~PowerLaw2SpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLaw2SpectralModel.__call__
      ~PowerLaw2SpectralModel.copy
      ~PowerLaw2SpectralModel.create
      ~PowerLaw2SpectralModel.energy_flux
      ~PowerLaw2SpectralModel.evaluate
      ~PowerLaw2SpectralModel.evaluate_error
      ~PowerLaw2SpectralModel.from_dict
      ~PowerLaw2SpectralModel.from_parameters
      ~PowerLaw2SpectralModel.integral
      ~PowerLaw2SpectralModel.inverse
      ~PowerLaw2SpectralModel.plot
      ~PowerLaw2SpectralModel.plot_error
      ~PowerLaw2SpectralModel.spectral_index
      ~PowerLaw2SpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: emax
   .. autoattribute:: emin
   .. autoattribute:: index
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
